align fixes

--- a/src/app/features/scraping/scraping.component.scss
+++ b/src/app/features/scraping/scraping.component.scss
@@ -34,11 +34,15 @@
   .scraping-card {
     display: flex;
     width: 100%;
-    max-width: 900px;
     box-shadow: var(--shadow-medium);
     border-radius: var(--border-radius-large);
     background-color: var(--color-background-light);
     margin-top: 20px;
+
+    form{
+        align-items: baseline;
+        justify-content: center;
+    }
 
     mat-card-header {
       padding: 16px;
@@ -50,6 +54,20 @@
         width: 100%;
       }
     }
+    mat-radio-group {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-bottom: 15px;
+
+      @include breakpoint-up(sm) { // Aplica estos estilos a partir de pantallas pequeñas (ej. 600px)
+              flex-direction: row; // En pantallas más grandes, los pone en una fila
+              flex-wrap: wrap; // Permite que los elementos se envuelvan si no caben
+              justify-content: flex-start; // Alinea al inicio de la fila
+              gap: 20px; // Aumenta el espacio entre ellos en fila
+              
+            }
+    }   
 
     mat-card-content {
       padding: 16px;
@@ -77,6 +95,18 @@
             gap: 10px;
             margin-bottom: 10px; // Espacio entre radios y el input
           }
+
+          @include breakpoint-up(sm) { // Aplica estos estilos a partir de pantallas pequeñas (ej. 600px)
+              flex-direction: row; // En pantallas más grandes, los pone en una fila
+              flex-wrap: wrap; // Permite que los elementos se envuelvan si no caben
+            //   justify-content: flex-start; // Alinea al inicio de la fila
+              gap: 20px; // Aumenta el espacio entre ellos en fila
+            }
+
+            // Opcional: Estilos para los radio buttons individuales si necesitas ajustar su espaciado interno
+            mat-radio-button {
+              margin-right: 15px; // Puedes usar esto en lugar de gap en el grupo si prefieres
+            }
 
           .full-width-input {
             width: 100%;
